# python-itglue-api

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.rst  noxfile.py  pyproject.toml
.github/workflows/: build-test.yaml  ci.yaml  test.yaml
itglue/: __init__.py  base.py  client.py  manager.py  resource.py
itglue/util/: __init__.py  snake.py
tests/: __init__.py  test_base.py  test_manager.py  test_resource.py  test_resources.py
tests/unit/: __init__.py
tests/unit/util/: test_snake.py
