[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "itglue-api"
authors = [{name = "David Haymond", email = "david.haymond@lewiscountywa.gov"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dynamic = ["version", "description"]
requires-python = "~= 3.7"
dependencies = [
    "requests ~= 2.27",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]",
    "mypy",
    "nox",
    "pre-commit",
]

[project.urls] 
Home = "https://github.com/lewiscounty/python-itglue-api"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100

[tool.flit.module]
name = "itglue"

[tool.isort]
profile = "black"
